refactor: Update project configuration and assets
- Correct the project name in package.json and metadata.json.
- Update React import paths in index.html to use the CDN directly.
- Replace placeholder images with Unsplash URLs in constants.ts.
- Remove image compression logic and quota exceeded error alerts from editor components, as this is likely handled elsewhere or no longer needed.
- Update the AI Studio link in README.md.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-oukrim-meals",
+  "name": "oukrim-meals",
   "private": true,
   "version": "0.0.0",
   "type": "module",
